# pitchmaker

./: .gitignore  .pre-commit-config.yaml  README.md  demo.ipynb  main.py  pyproject.toml  streamlit_app.py  tgtg_ai_leadgen_slides.html
